--- a/best_hotels/client/js/templates/hotels/new.html
+++ b/best_hotels/client/js/templates/hotels/new.html
@@ -70,7 +70,7 @@
                     </div>
                     <!-- STARS RATING -->
                     <div class="form-group col-md-3" ng-class="{'has-error' : hotelForm.hotelname.$invalid && !hotelForm.hotelname.$pristine ,'has-success' : hotelForm.hotelname.$valid }">
-                       <label class="control-label" for="hotelname">Stars rating</label>
+                       <label class="control-label" for="hotelname"> Rating</label>
 
                       <!-- http://code.stephenmorley.org/html-and-css/star-rating-widget/ -->
                       <div>
