--- a/best_hotels/client/css/style.css
+++ b/best_hotels/client/css/style.css
@@ -1,19 +1,33 @@
 .top{
   margin-top: 40px;
 }
+
 .bigimg{
   width: 100%;
   height: 600px;
+  /*z-index: -2;*/
 }
-.homeimage{
-   position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
+#sbox{
+  position: relative;
+  margin-top: 520px;
 
-  width:100%;
-  height:40%;
-  /*border:1px solid black;*/
+  margin-left: 0px;
+  margin-right: 0px;
+  height: 80px;
+  width: 100%;
+  background-color: black;
+  opacity: 0.6;
+ /* z-index: 1;*/
+  clear: both;
+  float:right;
+   /*filter: alpha(opacity=60);*/
+
+}
+#search{
+  position: absolute;
+  margin-top: 540px;
+  width: 100%;
+ /* z-index: 0;*/
 }
 /*sliding images*/
 .slide.ng-hide-add,
@@ -78,10 +92,49 @@ h1 {
 
 
 
-.big-checkbox {width: 250px; height: 250px;}
+
+
+
+/*SEARCH BUTTON*/
+.searchButton {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fc8d83), color-stop(1, #e4685d));
+  background:-moz-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
+  background:-webkit-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
+  background:-o-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
+  background:-ms-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
+  background:linear-gradient(to bottom, #fc8d83 5%, #e4685d 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fc8d83', endColorstr='#e4685d',GradientType=0);
+  background-color:#fc8d83;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Trebuchet MS;
+  font-size:16px;
+  font-weight:bold;
+  padding:4px 28px;
+  text-decoration:none;
+}
+.myButton:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e4685d), color-stop(1, #fc8d83));
+  background:-moz-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
+  background:-webkit-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
+  background:-o-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
+  background:-ms-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
+  background:linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e4685d', endColorstr='#fc8d83',GradientType=0);
+  background-color:#e4685d;
+}
+.myButton:active {
+  position:relative;
+  top:1px;
+}
+
+
+
+
 
  
-
+/*SUBMIT BUTTON*/
 .myButton {
   -moz-box-shadow:inset 0px 0px 0px 0px #f7c5c0;
   -webkit-box-shadow:inset 0px 0px 0px 0px #f7c5c0;
@@ -161,6 +214,7 @@ h1 {
   top:1px;
   padding: 10px;
 }
+
 
 
 
