--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -1,2 +1,46 @@
-<slider images = "images"></slider>
-<h1>Maja</h1>
+<slider images = "images">
+  
+</slider>
+<!-- <div>
+  <img src="./images/logoblack.png"alt="Smiley face" height="42" width="42">
+</div> -->
+<div class="container">
+  <div class="col-md-12">
+    <div class="row">
+     <div id="sbox">
+     </div>
+          <div id="search">
+             <div class="form-group col-md-4" ng-class="search">
+               <input autofocus type="text" name="search" class="form-control" ng-model="search" placeholder="Where do you want to go?">
+             </div>
+              <div class="form-group col-md-2">
+                <input autofocus type="date" name="search" class="form-control" ng-model="calendar" placeholder="Check In?">
+              </div>
+               <div class="form-group col-md-2">
+                <input autofocus type="date" name="search" class="form-control" ng-model="calendar1">
+              </div>
+              <div class="form-group col-md-2">
+                      <select class="form-control" name="guest" id="guest" ng-model="guest"  placeholder="Where do ?"> 
+                        <option value="1 Guest">1 Guest</option>
+                        <option value="2 Guests"selected>2 Guests</option>
+                        <option value="3 Guests">3 Guests</option>
+                        <option value="4 Guests">4 Guests</option>
+                        <option value="5 Guests">5 Guests</option> 
+                        <option value="6 Guests">6 Guests</option>
+                        <option value="7 Guests">7 Guests</option>
+                        <option value="8 Guests">8 Guests</option>
+                        <option value="9 Guests">9 Guests</option>
+                        <option value="9 Guests">10 Guests</option>
+                        <option value="9 Guests">11+ Guests</option>
+                      </select>
+              </div>
+              <div class="form-group col-md-2">
+                   <input type="submit" value="Search" class="searchButton">
+              </div>
+          </div>
+      </div> 
+    </div>
+ </div>
+ 
+
+
