--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -1,10 +1,46 @@
 <slider images = "images">
   
 </slider>
-<!-- <div>
-  <img src="./images/logoblack.png"alt="Smiley face" height="42" width="42">
+<!-- <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="col-md-2">
+        <h3 class="white">best<span class="white">HOTELS</span></h3>
+      </div>
+      <div class="col-md-4">
+      </div>
+      <div class="col-md-2">
+        <h3>Host</h3>
+      </div>
+      <div class="col-md-2">
+        <h3 class="white">My list </h3>
+      </div>
+      <div class="col-md-2">
+        <h3 class="white">SingIn</h3>
+      </div>
+    </div>
+    
+  </div>
+
+  
 </div> -->
-<div class="container">
+
+  <div class="navleft">
+    <ul>
+      <li role="presentation" class="logo"><a href="#">bestHotels</a></li>
+    </ul>
+  </div>
+    <div class="navig">
+      <ul class="nav">
+       <li role="presentation"><a href="#">Log In</a></li>
+       <li role="presentation"><a href="#">My List</a></li>
+       <li role="presentation"><a href="#">Host</a></li>
+      </ul>
+    </div>
+  
+
+
+<div class="container-fluid">
   <div class="col-md-12">
     <div class="row">
      <div id="sbox">
